<resources>
    <string name="app_name">FilmiKeeda</string>
    <string name="navigation_menu_btn">Navigate</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search movies</string>
    <string name="most_popular">Most Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="add_to_watchlist">Watch Later</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="ok">OK</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="movie_cast">Cast</string>
    <string name="credited_movies">Credited Works</string>
    <string name="refresh">Click To Refresh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="by_genres">By Genres</string>
    <string name="watchlist">Watchlist</string>
    <string name="about">About</string>
    <string name="suggest_movie">Suggest A Movie</string>
    <string name="reminders">Reminders</string>
    <string name="homepage">FilmiKeeda</string>
    <string name="no_internet_notif">Connection Is Lost!</string>
    <string name="remove_from_watchlist">Remove</string>
    <string name="about_us">About Us</string>
    <string name="intro_about_us">For any suggestion or query:</string>
</resources>
