<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/activity_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_md"
        tools:context="com.forceawakened.www.filmikeeda.MainActivity">
        <TextView
            android:id="@+id/text_upcoming"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_md"
            android:text="@string/upcoming"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_sm"/>
        <FrameLayout
            android:id="@+id/content_upcoming"
            android:layout_below="@+id/text_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/text_now_playing"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_below="@+id/content_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_md"
            android:text="@string/now_playing"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_sm"/>
        <FrameLayout
            android:id="@+id/content_now_playing"
            android:layout_below="@+id/text_now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/text_most_popular"
            android:layout_below="@+id/content_now_playing"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_md"
            android:text="@string/most_popular"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_sm"/>
        <FrameLayout
            android:id="@+id/content_most_popular"
            android:layout_below="@+id/text_most_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</ScrollView>
